# Quark

./: .gitignore  README.md
example/: package.json  package.json.cp  tsconfig.json
example/src/app/: globals.css  page.tsx  threedee.tsx
example/src/app/cube/: cube.tsx  page.tsx
grengine/example/: package.json
grengine/example copy/: reload.sh
grengine/example/src/app/: threedee.tsx  (+1 more)
grengine/grengine/: package.json  tsconfig.json
grengine/grengine/src/: abstract_object.ts  camera.ts  engine.ts  fbx_loader.ts  game_object.ts  index.ts  light.ts  mesh.ts
grengine/src/: camera.ts  engine.ts  fbx_loader.ts  game_object.ts
grengine/src/default_items/: cube.ts
grengine/src/loader/: mesh_loader.ts  obj_loader.ts
grengine/src/physics/: gravity_object.ts
old/: Message.cpp  Message.h  badengine.cpp  badengine.sln  badengine.vcxproj  badengine.vcxproj.filters
old/Linear Algebra/: basic_vectors.py  isometric.py
old/grengine/engine/old/: Cargo.toml  primitives.rs.dis
old/grengine/engine/old/src/: fbx_loader.rs  game_engine.rs  game_object.rs  input.rs  lib.rs  model.rs  renderer.rs  utils.rs
old/grengine/engine/old/src/assets/: fbx.rs
old/grengine/example/: Cargo.toml  index.html
old/jswebgl/: main.py
old/jswebgl/htmlexample/: draw-scene.js  game.js  index.html
old/jswebgl/webgl-engine/: package.json
old/testing/: main.cs
old/testing/rendertest/: main.cpp
quark/src/: camera.ts  engine.ts  fbx_loader.ts  game_object.ts  global_values.ts  index.ts  mesh.ts
quark/src/default_items/: cube.ts
quark/src/loader/: mesh_loader.ts  obj_loader.ts
(+10 files in other folders)
