[package]
name = "engine"
version = "0.1.0"
edition = "2018"

[dependencies]
nalgebra = "0.27.1"
wasm-bindgen = "0.2.79"
js-sys = "0.3"


[dependencies.web-sys]
version = "0.3.61"
features = [
    "Document",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "MouseEvent",
    "TouchEvent",
    "KeyboardEvent",
    "Window",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
]


[lib]
crate-type = ["cdylib", "rlib"]
